--- a/mfl.css
+++ b/mfl.css
@@ -1,3 +1,13 @@
 #weekly-challenges-box table tr td:first-child {
     text-align: center;
 }
+
+span.spread {
+    margin-left: 10px;
+    color: green;
+}
+
+span.spread.positive {
+    margin-left: 10px;
+    color: red;
+}
