--- a/mfl.css
+++ b/mfl.css
@@ -11,6 +11,6 @@ span.spread.positive {
     margin-left: 10px;
     color: red;
 }
-table#standings {
+table#standings,table#standings tbody {
     display: table !important;
 }
