--- a/scoring.css
+++ b/scoring.css
@@ -44,29 +44,42 @@ div.franchise-icon {
   max-width: 150px;
   max-height: 150px;
 }
-
+.player-row {
+  height: 50px;
+  display: flex;
+  flex: 1 0 100%;
+  flex-flow: row;
+}
 .player-row.position-order-QB {
   order: 1;
-  flex: 1;
 }
-
 .player-row.position-order-RB {
   order: 2;
-  flex: 2;
 }
 .player-row.position-order-WR {
   order: 3;
-  flex: 3;
 }
 .player-row.position-order-TE {
   order: 4;
-  flex: 4;
 }
 .player-row.position-order-Def {
   order: 5;
-  flex: 5;
 }
 .player-row.position-order-PK {
   order: 6;
-  flex: 6;
+}
+
+.player-position {
+  align-self: center;
+  font-weight: bold;
+  padding: 0 0.25em;
+}
+
+.player-image {
+  max-width: 107px;
+  display: block;
+}
+
+.player-image img {
+  max-height: 50px;
 }
