--- a/scoring.css
+++ b/scoring.css
@@ -50,6 +50,9 @@ div.franchise-icon {
   flex: 1 0 100%;
   flex-flow: row;
 }
+.player-row > div {
+  flex-grow: 1;
+}
 .player-row.position-order-QB {
   order: 1;
 }
@@ -77,9 +80,9 @@ div.franchise-icon {
 
 .player-image {
   max-width: 107px;
-  display: block;
 }
 
 .player-image img {
   max-height: 50px;
+  border-radius: 3em;
 }
