--- a/scoring.css
+++ b/scoring.css
@@ -80,6 +80,7 @@ div.franchise-icon {
   max-width: 107px;
   flex-grow: 0;
   align-self: center;
+  margin: 0 7px;
 }
 
 .player-image img {
@@ -97,9 +98,12 @@ div.franchise-icon {
   display: flex;
   flex-flow: row;
 }
-
+.player-name h3 {
+  color: #000;
+  margin-left: 7px;
+}
 .player-team {
-  max-width: 40px;
-  max-height: 30px;
+  max-width: 25px;
+  max-height: 25px;
   flex-grow: 1;
 }
