--- a/scoring.css
+++ b/scoring.css
@@ -154,3 +154,20 @@ div.franchise-score {
 .player-live-score.beat-projection {
   color: #04782c;
 }
+#nav-dots {
+  position: absolute;
+  top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: row;
+  flex-grow: 1;
+}
+.dots {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  cursor: default;
+}
