--- a/scoring.css
+++ b/scoring.css
@@ -70,7 +70,9 @@ div.franchise-score {
 .players > .player-row.position-order-PK {
   order: 6;
 }
-
+.players > .player-row.position-order-bench {
+  order: 9;
+}
 .player-position {
   align-self: center;
   font-weight: bold;
