--- a/scoring.css
+++ b/scoring.css
@@ -221,6 +221,9 @@ div.franchise-score {
   display: flex;
   flex-flow: row nowrap;
 }
+.game-status {
+  margin-right: 4px;
+}
 @media only screen and (max-width: 760px) {
   .player-name h3 {
     font-size: 11px;
